--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ html, h1, body {
   background-color: #f55;
   display: inline-block;
   height: 200px;
-  width: 100px;
+  width: 30%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   border: 2px solid black;
